部分测试用例

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <a href="https://github.com/Tencent/weui.js/blob/master/docs/README.md">查看文档</a>
+    <!-- <a href="https://github.com/Tencent/weui.js/blob/master/docs/README.md">查看文档</a> -->
 
     <div class="weui-search-bar" id="searchBar">
         <form class="weui-search-bar__form">
@@ -28,7 +28,7 @@
         </form>
         <a href="javascript:" class="weui-search-bar__cancel-btn">取消</a>
     </div>
-    <a href="javascript:" role="button" class="weui-btn weui-btn_primary">查询</a>
+    <!-- <a href="javascript:" role="button" class="weui-btn weui-btn_primary">查询</a> -->
     <script type="text/javascript" src="./js/index.js"></script>
 </body>
 
