页面表单action默认无

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
     <!-- <a href="https://github.com/Tencent/weui.js/blob/master/docs/README.md">查看文档</a> -->
     <div class="page__bd">
         <div class="weui-search-bar" id="searchBar">
-            <form class="weui-search-bar__form" id="searchForm" action="#">
+            <form class="weui-search-bar__form" id="searchForm" action="">
                 <div class="weui-search-bar__box">
                     <i class="weui-icon-search"></i>
                     <input type="search" class="weui-search-bar__input" id="searchQ" placeholder="请输入品牌名" required="">
