--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -72,7 +72,10 @@
     <script type="text/javascript">
         weui.searchBar('#searchBar');
 
+
         $().ready(function () {
+
+            $('#searchForm').submit()
 
             $('#searchForm').on('submit', function () {
                 let q = $('#searchQ').val()
